test/fails/bad_casts/as2.lgl
void main() {
    float f = 0.;
    bool fail = f as bool; // Not a subtype
    print 1;
}